--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,9 @@
 <footer class="footer">
   <p>
-    &copy; 2022 Arjun Das
-  </p>
-  <p>
     <a class="highlight-link" href="https://github.com/arjundas1/arjundas1.github.io" target="_blank" rel="noreferrer">
-      Published
+      Made with &#128150;
     </a>
-    with
+    using
     <a class="highlight-link" href="https://pages.github.com/" target="_blank" rel="noreferrer">
       GitHub Pages
     </a>
